deployments/kubernetes/ship-app/normaliser-event-notification.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: normaliser-event-notification
  namespace: ship-app
spec:
  template:
    spec:
      containers:
        - image: eu.gcr.io/mhaddon/normaliser-event-notification:v3
          env:
            - name: EGRESS_TYPE
              value: "shipdata/normalised"
            - name: EGRESS_SOURCE
              value: "mhaddon/normaliser"
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
