deployments/kubernetes/ship-app/ship-event-add-notification.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ship-event-add-notification
  namespace: ship-app
  labels:
    access-ship-store-mongodb: "1"
spec:
  template:
    metadata:
      labels:
        access-ship-store-mongodb: "1"
    spec:
      containers:
        - image: eu.gcr.io/mhaddon/ship-event-add-notification:v2
          env:
            - name: MONGO_USERNAME
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: username
            - name: MONGO_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: password
            - name: MONGO_COLLECTION
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: collection
            - name: MONGO_DB
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: database
            - name: MONGO_DOMAIN
              value: 'ship-store-mongodb.ship-app.svc.cluster.local'
            - name: MONGO_PORT
              value: '27017'
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi
