deployments/kubernetes/ship-app/ship-request-api.knative.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ship-request-api
  namespace: ship-app
  labels:
    access-ship-store-mongodb: "1"
spec:
  template:
    metadata:
      labels:
        access-ship-store-mongodb: "1"
    spec:
      containers:
        - image: eu.gcr.io/mhaddon/ship-request-api:v2
          env:
            - name: MONGO_USERNAME
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: username
            - name: MONGO_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: password
            - name: MONGO_COLLECTION
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: collection
            - name: MONGO_DB
              valueFrom:
                secretKeyRef:
                  name: ship-store-mongodb-credentials
                  key: database
            - name: MONGO_DOMAIN
              value: 'ship-store-mongodb.ship-app.svc.cluster.local'
            - name: MONGO_PORT
              value: '27017'
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ship-request-api-entry-route
  namespace: ship-app
spec:
  gateways:
    - knative-serving/cluster-local-gateway
    - knative-serving/knative-ingress-gateway
  hosts:
    - ship.tiw.io
  http:
    - rewrite:
        authority: ship-request-api.ship-app.tiw.io
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 80
          weight: 100
