deployments/kubernetes/ship-app/ship-request-frontend.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ship-request-frontend
  namespace: ship-app
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: eu.gcr.io/mhaddon/ship-request-frontend:v2
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: 256Mi
            requests:
              cpu: "50m"
              memory: 64Mi

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ship-request-frontend-entry-route
  namespace: ship-app
spec:
  gateways:
    - knative-serving/cluster-local-gateway
    - knative-serving/knative-ingress-gateway
  hosts:
    - tiw.io
  http:
    - rewrite:
        authority: ship-request-frontend.ship-app.tiw.io
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 80
          weight: 100
